# metNum_lib

./: CMakeLists.txt  README.md  library.h
examples/: exampleNonLinear.cpp  exampleNumericIntegration.cpp
include/: approximation.h  differentialEquation.h  interpolation.h  linearEquation.h  nonLinearEquation.h  nonLinearSolver.h  numericIntegration.h
src/: approximation.cpp  aproximation.cpp  differentialEquation.cpp  interpolation.cpp  linearEquation.cpp  nonLinearEquation.cpp  nonLinearSolver.cpp  numericIntegration.cpp
tests/: code  test_approx.hpp  test_diff_eq.hpp  test_integration.hpp  test_interpolate.hpp  test_lin_eq.hpp  test_nonlin_eq.hpp  tests.cpp
